# MLOps_track_November

Project_1/: Bike_prediction.ipynb  LinearRegressionModel.ipynb  LinearRegression_Model.ipynb  RF_developement.ipynb  RandomForest.ipynb  XGBoostModel.ipynb  abc.ipynb  plottings.ipynb  pyproject.toml  requirements.txt
Project_1/LinearRegression/: LR_developement.ipynb  LR_final.ipynb
Project_1/RandomForest/: RF_developement.ipynb  RF_final.ipynb
Project_1/artifacts/: pearson_pvalues_matrix.csv  spearman_correlation_matrix.csv
Project_1/xgBoost/: XGB_developement.ipynb  XGB_final.ipynb
