[project]
name = "project-1"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "mlflow>=3.1.4",
    "numpy>=2.0.2",
    "pandas==2.3.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "ucimlrepo>=0.0.7",
    "xgboost>=2.1.4",
]
