[project]
name = "project-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "scikit-learn>=1.6.1",
    "mlflow>=3.1.4",
    "jupyter>=1.1.1",
    "seaborn>=0.13.2",
    "ucimlrepo>=0.0.7",
    "xgboost>=3.1.1",
]
